fix: update requirements numbering

--- a/tex/2-stan-wiedzy/2-historia.tex
+++ b/tex/2-stan-wiedzy/2-historia.tex
@@ -4,7 +4,7 @@ Na początku XX wieku gdy sieci telekomunikacyjne dopiero się rozwijały, wszys
 
 \begin{figure}[!htbp]
     \centering \includegraphics[width=1\linewidth]{telefonistki.jpg}
-    \caption{Pracowniczki warszawskiej centrali telefonicznej z końca lat 20. XX wieku}\label{fig:telefonistki}
+    \caption{Pracowniczki warszawskiej centrali telefonicznej z końca lat 20. XX wieku. Źródło: \url{https://wielkahistoria.pl/wp-content/uploads/2020/07/Telefonistki-z-warszaskiej-centrali-1024x760.jpg}.}\label{fig:telefonistki}
 \end{figure}
 
 Dziś taki scenariusz wydaje się wręcz absurdalny, a oferty pracy dla telefonistek dawno zniknęły z tablic ogłoszeń. Praca wykonywana niegdyś przez telefonistki (czyli komutacja łączy) nadal jest potrzebna do prawidłowego funkcjonowania sieci telekomunikacyjnych, lecz obecnie realizują ją programy komputerowe w sposób w pełni zautomatyzowany. Ręczna komutacja była pierwszym krokiem w kierunku rozwoju globalnych sieci telekomunikacyjnych i choć z dzisiejszej perspektywy wydaje się być bardzo pracochłonna i ograniczająca, bez niej nie powstałyby fundamenty, na których oparto późniejsze systemy automatyczne. Jest to przykład tego, jak technologia stopniowo uwalniała człowieka od bezpośredniej obsługi różnych systemów dając mu przestrzeń na rozwój w innych obszarach.
@@ -15,7 +15,7 @@ O telefonistkach możemy powiedzieć, że zarządzały one pracą systemu teleko
 
 \begin{figure}[!htbp]
     \centering \includegraphics[width=1.0\linewidth]{22-system.png}
-    \caption{Dwa stany systemu: sprzed, oraz po realizacji zgłoszenia o treści: "D" chce zadzwonić do "F"}
+    \caption{Dwa stany systemu: sprzed, oraz po realizacji zgłoszenia o treści: "D" chce zadzwonić do "F". Źródło: Opracowanie własne.}
 \end{figure}
 
 Pomówmy trochę o \hyperlink{def:wnioskowanie}{\textit{wnioskowaniu}}. Jak ono przebiega? Po pierwsze, telefonistka otrzymuje \hyperlink{def:dane}{\textit{dane}}. \textbf{Dane} to fakty lub statystyki zebrane w celu analizy. Telefonistka gromadzi dane w formie faktów dotyczących zaistniałych zdarzeń. Na przykład: dzwoni aparat telefoniczny, telefonistka podnosi słuchawkę i słyszy, że abonent chce połączyć się z abonentem mieszkającym w kamienicy pod numerem 35 na ulicy Polnej. Następnie dostępne dane zostają przekształcone w \hyperlink{def:informacja}{\textit{informację}}. \textbf{Informacja} to dane pozbawione formy przekazu. Równie dobrze rozmowa z abonentem mogłaby przebiec zupełnie inaczej, a telefonistka mogłaby otrzymać listowną prośbę o realizację połączenia. Różne dane mogą dostarczyć tę samą informację, czyli że abonent z określonego łącza chce dodzwonić się do abonenta z innego, konkretnego łącza. Gdy telefonistka uzyska informację o zgłoszeniu, łączy ją z posiadanymi już informacjami, np. dotyczącymi rozmieszczenia łączy na tablicy komutacyjnej. Następnie wykorzystuje swoją \hyperlink{def:wiedza}{\textit{wiedzę}}, czyli zestaw wzorców umożliwiających interpretację oraz przewidywanie tego, co się wydarzyło, co dzieje się obecnie i co może się wydarzyć w przyszłości. \textbf{Wiedza} opiera się na informacji oraz umiejętnościach zdobytych dzięki \hyperlink{def:doswiadczenie}{\textit{doświadczeniu}} lub \hyperlink{def:edukacja}{\textit{edukacji}}. Telefonistka obserwuje aktualny stan systemu i \hyperlink{def:wnioskowanie}{\textit{wnioskując}}, na podstawie wiedzy, wyobraża sobie stan docelowy (pożądany), a następnie definiuje akcje sterujące, które należy przeprowadzić na systemie, aby osiągnął on ten stan.
