--- a/tex/2-stan-wiedzy/5-przeglad.tex
+++ b/tex/2-stan-wiedzy/5-przeglad.tex
@@ -20,7 +20,7 @@ Zaawansowane zastosowania pozwalają jednej grupie dedykowanych pętli przejąć
 
 \begin{figure}[!h]
     \centering \includegraphics[width=0.4\linewidth]{25-hierachical.png}
-    \caption{Hierarchiczna organizacja zamkniętych pętli sterowania}\label{fig:25-hierachical}
+    \caption{Hierarchiczna organizacja zamkniętych pętli sterowania. Źródło: \cite{etsieni2024}.}\label{fig:25-hierachical}
 \end{figure}
 
 Pętla \textbf{rozproszona} składa się z komponentów działających w różnych lokalizacjach, które komunikują się ze sobą poprzez mechanizmy przesyłania wiadomości. 
@@ -46,7 +46,7 @@ Dodatkowo element "Orient" może przekazywać swoje dane do elementów "Observe"
 
 \begin{figure}[!h]
     \centering \includegraphics[width=1\linewidth]{25-ooda.png}
-    \caption{Architektura pętli OODA}\label{fig:25-ooda}
+    \caption{Architektura pętli OODA. Źródło: \cite{etsieni2024}.}\label{fig:25-ooda}
 \end{figure}
 
 \subsubsection{MAPE-K}
@@ -56,7 +56,7 @@ Jest to pętla sekwencyjna, każdy element komunikuje się jedynie na dwóch pł
 
 \begin{figure}[!h]
     \centering \includegraphics[width=1\linewidth]{25-mapek.png}
-    \caption{Architektura pętli MAPE-K}\label{fig:25-mapek}
+    \caption{Architektura pętli MAPE-K. Źródło: \cite{etsieni2024}.}\label{fig:25-mapek}
 \end{figure}
 
 \subsubsection{Focale}
@@ -64,7 +64,7 @@ Architektura pętli Focale \cite{strassner2007} jest widoczna na Rysunku \ref{fi
 
 \begin{figure}[!h]
     \centering \includegraphics[width=1\linewidth]{25-focale.png}
-    \caption{Architektura pętli Focale}\label{fig:25-focale}
+    \caption{Architektura pętli Focale. Źródło: Opracowanie własne na podstawie \cite{etsieni2024}.}\label{fig:25-focale}
 \end{figure}
 
 \subsubsection{GANA}
@@ -72,7 +72,7 @@ Architektura GANA (Generic Autonomic Network Architecture) \cite{etsigana2018} j
 
 \begin{figure}[!h]
     \centering \includegraphics[width=1\linewidth]{25-gana.png}
-    \caption{Architektura pętli GANA}\label{fig:25-gana}
+    \caption{Architektura pętli GANA. Źródło: \cite{etsieni2024}.}\label{fig:25-gana}
 \end{figure}
 
 \subsubsection{COMPA}
@@ -80,7 +80,7 @@ Architektura pętli COMPA (Control, Orchestration, Management, Policies, Analyti
 
 \begin{figure}[!h]
     \centering \includegraphics[width=1\linewidth]{25-compa.png}
-    \caption{Architektura pętli COMPA}\label{fig:25-compa}
+    \caption{Architektura pętli COMPA. Źródło: \cite{etsieni2024}.}\label{fig:25-compa}
 \end{figure}
 
 \subsubsection{Focale v3}
@@ -88,5 +88,5 @@ Architektura pętli Focale v3 \cite{strassner2009} jest widoczna na Rysunku \ref
 
 \begin{figure}[!h]
     \centering \includegraphics[width=1\linewidth]{25-focalev3.png}
-    \caption{Architektura pętli Focale v3}\label{fig:25-focalev3}
+    \caption{Architektura pętli Focale v3. Źródło: Opracowanie własne na podstawie \cite{etsieni2024}.}\label{fig:25-focalev3}
 \end{figure}
