--- a/tex/3-architektura/2-wymagania-i-zalozenia.tex
+++ b/tex/3-architektura/2-wymagania-i-zalozenia.tex
@@ -104,7 +104,7 @@ Warto też wspomnieć o tym, że obecne w wielu architekturach pętli repozytori
 
 Wprowadzone w niniejsyzym podrozdziale pojęcia są szerzej omówione w dalszej części pracy. 
 
-Poniżej prezentowane jest spełnienie wymagań dotyczących modelowania pęli:
+Poniżej prezentowane jest spełnienie wymagań dotyczących modelowania pętli:
 \begin{enumerate}
     \setcounter{enumi}{15}
     \item Elementy są pobudzane poprzez zmianę statusu obiektu Kubernetes.
