--- a/tex/appendix/3-lupn.tex
+++ b/tex/appendix/3-lupn.tex
@@ -54,7 +54,7 @@ Podczas przeglądania specyfikacji \hyperlink{def:obiekt-lupn}{\textbf{obiektów
 
 \begin{figure}[!h]
     \centering \includegraphics[width=1\linewidth]{a3-tree.png}
-    \caption{Drzewko zależności obiektów LupN}\label{fig:a3-tree}
+    \caption{Drzewko zależności obiektów LupN. Źródło: Opracowanie własne.}\label{fig:a3-tree}
 \end{figure}
 
 \subsubsection{MasterSpec}
