--- a/tex/appendix/4-lupin-lupout.tex
+++ b/tex/appendix/4-lupin-lupout.tex
@@ -6,7 +6,7 @@ Specyfikacja w formie elektronicznej znajduje się pod linkiem: \url{https://git
 
 \begin{figure}[!h]
     \centering \includegraphics[width=1\linewidth]{a4-arch.png}
-    \caption{Architektura Lupus}\label{fig:a4-arch}
+    \caption{Architektura Lupus. Źródło: Opracowanie własne.}\label{fig:a4-arch}
 \end{figure}
 
 \subsection{Interfejs Lupin}
