--- a/tex/appendix/6-akcje.tex
+++ b/tex/appendix/6-akcje.tex
@@ -53,26 +53,26 @@ Każdy przykład zawiera:
 \subsubsection{Send}
 \begin{figure}[!h]
     \centering \includegraphics[width=1\linewidth]{a6-send.png}
-    \caption{Przykład modyfikacji danych przez akcje Send}\label{fig:a6-send}
+    \caption{Przykład modyfikacji danych przez akcje Send. Źródło: Opracowanie własne.}\label{fig:a6-send}
 \end{figure}
 \subsubsection{Nest}
 \begin{figure}[!h]
     \centering \includegraphics[width=1\linewidth]{a6-nest.png}
-    \caption{Przykład modyfikacji danych przez akcje Nest}\label{fig:a6-nest}
+    \caption{Przykład modyfikacji danych przez akcje Nest. Źródło: Opracowanie własne.}\label{fig:a6-nest}
 \end{figure}
 \subsubsection{Remove}
 \begin{figure}[!h]
     \centering \includegraphics[width=1\linewidth]{a6-remove.png}
-    \caption{Przykład modyfikacji danych przez akcje Remove}\label{fig:a6-remove}
+    \caption{Przykład modyfikacji danych przez akcje Remove. Źródło: Opracowanie własne.}\label{fig:a6-remove}
 \end{figure}
 \subsubsection{Rename}
 \begin{figure}[!h]
     \centering \includegraphics[width=1\linewidth]{a6-rename.png}
-    \caption{Przykład modyfikacji danych przez akcje Rename}\label{fig:a6-rename}
+    \caption{Przykład modyfikacji danych przez akcje Rename. Źródło: Opracowanie własne.}\label{fig:a6-rename}
 \end{figure}
 \subsubsection{Duplicate}
 \begin{figure}[!h]
     \centering \includegraphics[width=1\linewidth]{a6-duplicate.png}
-    \caption{Przykład modyfikacji danych przez akcje Duplicate}\label{fig:a6-duplicate}
+    \caption{Przykład modyfikacji danych przez akcje Duplicate. Źródło: Opracowanie własne.}\label{fig:a6-duplicate}
 \end{figure}
 \subsubsection{Insert}
