--- a/tex/4-implementacja/2-mechanizmy.tex
+++ b/tex/4-implementacja/2-mechanizmy.tex
@@ -6,14 +6,14 @@ Działanie Kubernetes opiera się na zamkniętej pętli sterowania [odnośnik do
 
 \begin{figure}[!h]
     \centering \includegraphics[width=1\linewidth]{42-k8s-arch.png}
-    \caption{Architektura Kubernetes}\label{fig:42-k8s-arch}
+    \caption{Architektura Kubernetes. Źródło: \url{https://kubernetes.io/docs/concepts/architecture/}}\label{fig:42-k8s-arch}
 \end{figure}
 
 Flow pracy kontrolera pokazano na rysunku \ref{fig:42-flow}. Gdy `kube-api-server' otrzyma żądanie zmiany danego obiektu API zanim `kube-api-server` zleci utrwalenie tych zmian wykona tzw. \textit{webhooki} do kontrolera danego obiektu. Webhooki nie są jednakże istotne z punktu widzenia niniejszej pracy dyplomowej \footnote{Dla zainteresowanych tematem: link}. Następnie, gdy doszło do zmian w obiekcie, kontroler zostaje o tym poinformowany. Jego misją jest rekoncyliacja, czyli porównanie aktualnego stanu obiektu ze stanem pożądanym. Kontroler zawiera w sobie logikę rekoncyliacji, która przybliży oba stany do siebie. Wykonanie logiki wiążę się często z przeprowadzeniem różnych akcji przez kontroler w innych częściach klastra. 
 
 \begin{figure}[!h]
     \centering \includegraphics[width=1\linewidth]{42-flow.png}
-    \caption{Flow pracy kontrolera}\label{fig:42-flow}
+    \caption{Flow pracy kontrolera. Źródło: Opracowanie własne.}\label{fig:42-flow}
 \end{figure}
 
 \subsubsection{Zasoby własne} 
@@ -33,5 +33,5 @@ Kubebuilder jest frameworkiem programistycznym do tworzenia textit{Zasobów Wła
 
 \begin{figure}[!h]
     \centering \includegraphics[width=1\linewidth]{42-flow2.png}
-    \caption{Zaznaczenie elementów dających się zaprogramować podczas flow pracy kontrolera}\label{fig:42-flow2}
+    \caption{Zaznaczenie możliwych do zaprogramowania elementów flow pracy kontrolera. Źródło: Opracowanie własne.}\label{fig:42-flow2}
 \end{figure}
