--- a/tex/2-stan-wiedzy/4-przeglad.tex
+++ b/tex/2-stan-wiedzy/4-przeglad.tex
@@ -49,7 +49,7 @@ Komponentem odpowiedzialnym za pętle sterowania w ONAP jak i zarówno kandydate
     \item Wymaga stosowania architektury pętli zgodnej z MAPE-K, co ogranicza możliwość wdrożenia nietypowych pętli sterowania.
     \item Wymaga ścisłej integracji z innymi modułami ONAP takimi jak DCAE, CDS, czy silniki polityk, co ogranicza możliwości tworzenia pętli niezależnych od ekosystemu ONAP.
     \item Jest zoptymalizowany do prostych pętli sterowania. Brak natywnego wsparcia dla bardziej złożonych architektur jak pętle hierarchiczne, rozproszone lub współzależne.
-    \item Brak wsparcia AI/ML w swoich komponentów.
+    \item Brak wsparcia AI/ML w komponentach.
     \item Ścisłe połączenie z wybranymi silnikami polityk takimi jak XACML \footnote{\url{https://docs.onap.org/projects/onap-policy-parent/en/istanbul/xacml/xacml.html}}, Drools\footnote{\url{https://docs.onap.org/projects/onap-policy-parent/en/istanbul/drools/drools.html}} czy APEX \footnote{\url{https://docs.onap.org/projects/onap-policy-parent/en/istanbul/apex/apex.html}} 
     \item Ścisła specjalizacja w orkiestracji sieci SDN\&NFV. Ciężko jest rozwijać pętle, które nie są związane z tym zagadnieniem.
 \end{itemize}
